import '../models/learning_module.dart';
import '../models/quiz_model.dart';
import '../models/progress_model.dart';
import 'storage_service.dart';
import 'logger_service.dart';
import 'package:uuid/uuid.dart';
import 'dart:math';

class LearningService {
  final StorageService storage;
  final LoggerService logger;
  final _uuid = const Uuid();

  LearningService({
    required this.storage,
    required this.logger,
  });

  Future<List<LearningModule>> getModules({String? category, int? level}) async {
    try {
      logger.debug('Fetching learning modules', null);
      await Future.delayed(const Duration(milliseconds: 500));

      // In production, fetch from API:
      // final response = await apiService.get<List<dynamic>>('/modules');
      // return response.map((m) => LearningModule.fromJson(m)).toList();

      // Mock modules
      return [
        LearningModule(
          id: _uuid.v4(),
          title: 'Introduction à la Programmation',
          description: 'Découvrez les bases de la programmation et les concepts fondamentaux.',
          category: 'Programmation',
          estimatedDuration: 120,
          level: 1,
          topics: ['Variables', 'Boucles', 'Conditions'],
          createdAt: DateTime.now().subtract(const Duration(days: 30)),
          progress: 0.0,
        ),
        LearningModule(
          id: _uuid.v4(),
          title: 'Structures de Données',
          description: 'Maîtrisez les structures de données essentielles pour la programmation.',
          category: 'Programmation',
          estimatedDuration: 180,
          level: 2,
          topics: ['Tableaux', 'Listes', 'Dictionnaires'],
          createdAt: DateTime.now().subtract(const Duration(days: 20)),
          progress: 0.5,
        ),
        LearningModule(
          id: _uuid.v4(),
          title: 'Algorithmes Avancés',
          description: 'Explorez des algorithmes complexes et leurs applications pratiques.',
          category: 'Algorithmes',
          estimatedDuration: 240,
          level: 3,
          topics: ['Tri', 'Recherche', 'Graphes'],
          createdAt: DateTime.now().subtract(const Duration(days: 10)),
          progress: 0.0,
        ),
      ];
    } catch (e) {
      logger.error('Failed to fetch modules', e);
      rethrow;
    }
  }

  Future<LearningModule> getModuleById(String id) async {
    try {
      logger.debug('Fetching module by ID: $id', null);
      await Future.delayed(const Duration(milliseconds: 300));
      final modules = await getModules();
      return modules.firstWhere((m) => m.id == id);
    } catch (e) {
      logger.error('Failed to fetch module', e);
      rethrow;
    }
  }

  Future<List<LearningModule>> getPersonalizedModules(String userId) async {
    try {
      logger.logUserAction('fetch_personalized_modules', metadata: {'userId': userId});
      await Future.delayed(const Duration(milliseconds: 500));
      // In production, this would analyze user progress and recommend modules
      return await getModules();
    } catch (e) {
      logger.error('Failed to fetch personalized modules', e);
      rethrow;
    }
  }

  Future<Quiz> generateQuiz(String moduleId, int difficulty) async {
    try {
      logger.logUserAction('generate_quiz', metadata: {
        'moduleId': moduleId,
        'difficulty': difficulty,
      });

      await Future.delayed(const Duration(seconds: 1));

      // In production, use AI to generate quiz
      return Quiz(
        id: _uuid.v4(),
        title: 'Quiz Auto-généré',
        description: 'Quiz personnalisé basé sur votre progression',
        moduleId: moduleId,
        questions: [
          Question(
            id: _uuid.v4(),
            question: 'Quelle est la complexité temporelle d\'une recherche dans un tableau non trié ?',
            options: ['O(1)', 'O(n)', 'O(log n)', 'O(n²)'],
            correctAnswerIndex: 1,
            explanation: 'Dans un tableau non trié, il faut parcourir tous les éléments, donc O(n).',
          ),
          Question(
            id: _uuid.v4(),
            question: 'Qu\'est-ce qu\'une structure de données LIFO ?',
            options: ['Queue', 'Pile', 'Arbre', 'Graphe'],
            correctAnswerIndex: 1,
            explanation: 'LIFO signifie Last In First Out, caractéristique d\'une pile.',
          ),
        ],
        createdAt: DateTime.now(),
      );
    } catch (e) {
      logger.error('Failed to generate quiz', e);
      rethrow;
    }
  }

  Future<UserProgress> getUserProgress(String userId, String moduleId) async {
    try {
      logger.debug('Fetching user progress', null);
      await Future.delayed(const Duration(milliseconds: 300));

      // In production, fetch from API
      return UserProgress(
        userId: userId,
        moduleId: moduleId,
        progress: Random().nextDouble() * 0.8,
        startedAt: DateTime.now().subtract(Duration(days: Random().nextInt(10))),
        timeSpent: Random().nextInt(120),
      );
    } catch (e) {
      logger.error('Failed to fetch user progress', e);
      rethrow;
    }
  }

  Future<void> updateProgress(String userId, String moduleId, double progress) async {
    try {
      logger.logUserAction('update_progress', metadata: {
        'userId': userId,
        'moduleId': moduleId,
        'progress': progress,
      });

      await Future.delayed(const Duration(milliseconds: 200));
      // In production, save to API/database
    } catch (e) {
      logger.error('Failed to update progress', e);
      rethrow;
    }
  }

  Future<List<LearningContent>> generateContent(String topic, ContentType type) async {
    try {
      logger.logUserAction('generate_content', metadata: {
        'topic': topic,
        'type': type.toString(),
      });

      await Future.delayed(const Duration(seconds: 1));

      // In production, use AI to generate content
      return [
        LearningContent(
          id: _uuid.v4(),
          type: type,
          title: 'Contenu généré : $topic',
          content: 'Voici le contenu généré automatiquement pour vous aider à comprendre $topic.',
          metadata: {'generated': true, 'topic': topic},
        ),
      ];
    } catch (e) {
      logger.error('Failed to generate content', e);
      rethrow;
    }
  }
}

